Correction de warnings à la compilation